--- a/assignment.html
+++ b/assignment.html
@@ -67,7 +67,7 @@
 		  </div>
 		  	  
 		   <div class="col-sm-12 text-left"> 
-				<img src="images/img1.jpg" alt="no image" height="140" width="120" class="img-thumbnail" style="float:left; margin: 10px; "/>  
+				<img src="images/sears.png" alt="no image" height="140" width="120" class="img-thumbnail" style="float:left; margin: 10px; "/>  
 					<h6>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 					Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 					Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -139,7 +139,7 @@
 						<div class="media">
 							<div class="media-left">
 							<a href="#">
-										<img class="media-object" src="images/key_3.jpg" alt="no image" >
+										<img class="media-object" src="images/csr3.jpg" alt="no image" >
 								</a>
 							</div>
 							<div class="media-body">
@@ -156,7 +156,7 @@
 					<div class="media">
 							<div class="media-left">
 							<a href="#">
-										<img class="media-object" src="images/key_3.jpg" alt="no image">
+										<img class="media-object" src="images/csr3.jpg" alt="no image">
 								</a>
 							</div>
 							<div class="media-body">
@@ -172,7 +172,7 @@
 					<div class="media">
 							<div class="media-left">
 							<a href="#">
-										<img class="media-object" src="images/key_3.jpg" alt="no image">
+										<img class="media-object" src="images/csr3.jpg" alt="no image">
 								</a>
 							</div>
 							<div class="media-body">
@@ -194,7 +194,7 @@
 						<div class="media">
 							<div class="media-left">
 							<a href="#">
-										<img class="media-object" src="images/key_3.jpg" alt="no image">
+										<img class="media-object" src="images/hr.jpg" alt="no image">
 								</a>
 							</div>
 							<div class="media-body">
@@ -209,7 +209,7 @@
 					<div class="media">
 							<div class="media-left">
 							<a href="#">
-										<img class="media-object" src="images/key_3.jpg" alt="no image">
+										<img class="media-object" src="images/hr.jpg" alt="no image">
 								</a>
 							</div>
 							<div class="media-body">
@@ -225,7 +225,7 @@
 					<div class="media">
 							<div class="media-left">
 							<a href="#">
-										<img class="media-object" src="images/key_3.jpg" alt="no image">
+										<img class="media-object" src="images/hr.jpg" alt="no image">
 								</a>
 							</div>
 							<div class="media-body">
@@ -237,12 +237,7 @@
 					</div>
 			</div>
 </div>
-
-
-			
-			
-			
-			
+		
 			</div>
 		</div>
 		 </div>
