--- a/assignment.html
+++ b/assignment.html
@@ -248,9 +248,10 @@
 	  <div class="row">
 	  
 	     <div class="col-md-8">
+		  <div class="map-responsive">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.5314123004396!2d73.94788561424247!3d18.550065787391727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c3c577468c2f%3A0x953dd96cf0b3bcb9!2sSears+IT+and+Management+Services+India+Pvt.+Ltd.!5e0!3m2!1sen!2sin!4v1454339498278" 
 			width="600" height="200" frameborder="0" style="border:"0" allowfullscreen></iframe>
-		 </div>
+		 </div></div>
 		 <div class="col-md-4">
 		   <h4> Contact Us</h4>
 		    <h5> <span class="glyphicon glyphicon-envelope"></span>  Email </h5>
